fixing layout issues

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,9 @@ header {
         width: 50%;
         height: 50%;
     }
+    .image-container {
+        gap: 30px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -63,6 +66,9 @@ header {
     .image-container img{
         width: 60%;
         height: 60%;
+    }
+    .image-container {
+        gap: 20px;
     }
 }
 
